--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vuex": "^3.6.2"
@@ -30,6 +32,8 @@
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
     "prettier": "^2.4.1",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "vue-template-compiler": "^2.6.14"
